Commit 10 *cleaned up the code